[tool.poetry]
name = "negatives-classifier"
version = "0.1.0"
description = "Used to classify and catalog digitalized negatives!"
authors = ["electrototo <cristobal@liendo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.1"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"
torchvision = {version = "^0.21.0+cu118", source = "torch-gpu"}
torch = {version = "^2.6.0+cu118", source = "torch-gpu"}
ultralytics = "^8.3.70"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
